@@ -18,6 +18,8 @@ Changes in <next version>:
    when import 2D data
  * Rewrite of widget tree internals to fix miscellaneous bugs
  * Optionally use astropy for SAMP
+ * Add setting to extend the python import path
+ * Add option to select widgets with same name on page
 
 Bug fixes
  * Fix faulty caching of datasets expressions
